[package]
name = "kic-debug"
description = "A full-featured debugger that runs on an instrument."
version = "0.13.0"
authors = ["Keithley Instruments, LLC"]
edition = "2021"
repository = "https://github.com/TEK-Engineering/tsp-toolkit-kic-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = "0.3.16"
colored = "2.0.0"
mockall = { version = "0.11.4", features = ["nightly"] }

[dependencies]
shlex = "1.1.0"
chrono = "0.4.29"
anyhow = "1.0.69"
clap = { version = "4.2.7", features = ["derive", "cargo", "string"] }
colored = "2.0.0"
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = "0.3.16"
tsp-toolkit-kic-lib = { git = "https://github.com/TEK-Engineering/tsp-toolkit-kic-lib.git", tag = "v0.13.0"}
mockall = { version = "0.11.4", features = ["nightly"] }
regex = "1.9.1"
machineid-rs = "^1.2.4"
hmac-sha512 = "1.1.5"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.7"
ring = "^0.17.5"
directories = "5.0.1"
