[package]
name = "kic-debug"
description = "A full-featured debugger that runs on an instrument."
version = "0.14.1"
authors = ["Keithley Instruments, LLC"]
edition = "2021"
repository = "https://github.com/TEK-Engineering/tsp-toolkit-kic-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.5.0"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive", "cargo", "string"] }
colored = "2.1.0"
directories = "5.0.1"
hex = "0.4.3"
hmac = "0.12.1"
hmac-sha512 = "1.1.5"
machineid-rs = "^1.2.4"
mockall = { version = "0.12.1", features = ["nightly"] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"
ring = "0.17.8"
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
shlex = "1.3.0"
thiserror = "1.0.58"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
tsp-toolkit-kic-lib = { git = "https://github.com/TEK-Engineering/tsp-toolkit-kic-lib.git", branch = "dev"}
